docs(website): finished Protractor migration guide

--- a/documentation/serenity-js.org/docs/getting-started/index.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/index.mdx
@@ -5,7 +5,7 @@ sidebar_position: 2
 # Getting started
 
 Serenity/JS is a full-stack acceptance testing framework. Its modular design enables you to create test scenarios
-interacting with **_any_** interface of your system while reducing the number of dependencies you need.
+**_interacting with any interface of your system_** while reducing the number of dependencies you need.
 
 :::info Get started fast
 To get a feel for the Serenity/JS, [follow our 15-minute web testing tutorial](/handbook/web-testing/your-first-web-scenario/) 🚀
