docs(website): wordsmithing

--- a/documentation/serenity-js.org/docs/getting-started/serenity-js-with-playwright-test.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/serenity-js-with-playwright-test.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 6
-title: Using with Playwright Test
+title: Extending Playwright Test
 ---
 
-# Using Serenity/JS with Playwright Test
+# Extending Playwright Test with Serenity/JS
 
 Serenity/JS offers excellent support for Playwright, including **Playwright Test**, **UI Mode**, **trace viewer**, and **auto-waiting locators**!
 Plus, it accommodates both classic Playwright tests and Serenity/JS [Screenplay Pattern scenarios](/handbook/design/screenplay-pattern/),
