--- a/documentation/serenity-js.org/docs/getting-started/serenity-js-with-protractor.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/serenity-js-with-protractor.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 7
-title: Using with Protractor
+title: Extending Protractor
 ---
 
-# Using Serenity/JS with Protractor
+# Extending Protractor with Serenity/JS
 
 ```mdx-code-block
 import CurrentNodeVersion from '@site/src/components/CurrentNodeVersion'
