--- a/documentation/serenity-js.org/docs/getting-started/serenity-js-with-webdriverio.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/serenity-js-with-webdriverio.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 8
-title: Using with WebdriverIO
+title: Extending WebdriverIO
 ---
 
-# Using Serenity/JS with WebdriverIO
+# Extending WebdriverIO with Serenity/JS
 
 Serenity/JS offers excellent support for **WebdriverIO**!
 Plus, it accommodates both classic WebdriverIO tests and Serenity/JS [Screenplay Pattern scenarios](/handbook/design/screenplay-pattern/),
