--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -51,8 +51,8 @@ details of any activities performed by Serenity/JS [actors](/api/core/class/Acto
 
 To install the [`@serenity-js/serenity-bdd`](/api/serenity-bdd) module, run the following command in your computer terminal:
 
-```
-npm install --save-dev @serenity-js/{core,serenity-bdd}
+```sh npm2yarn
+npm install --save-dev @serenity-js/core @serenity-js/serenity-bdd
 ```
 
 To learn more about the installation process, [follow the API documentation](/api/serenity-bdd).
