--- a/documentation/serenity-js.org/docs/test-runners/protractor.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/protractor.mdx
@@ -111,8 +111,8 @@ You might also want to install Serenity/JS reporting services:
 - [`@serenity-js/serenity-bdd`](/api/serenity-bdd)
 
 To do the above, run the following command in your terminal:
-```shell
-npm install --save-dev @serenity-js/{core,console-reporter,protractor,web,serenity-bdd}
+```sh npm2yarn
+npm install --save-dev @serenity-js/core @serenity-js/console-reporter @serenity-js/protractor @serenity-js/web @serenity-js/serenity-bdd
 ```
 
 Protractor offers a test runner that uses Jasmine, Mocha, or Cucumber to run your test scenarios.
