--- a/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
+++ b/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
@@ -48,10 +48,7 @@ For example:
 
 Below example shows basic configuration of a [GitLab CI Pipeline](https://docs.gitlab.com/ee/ci/yaml/gitlab_ci_yaml.html) you can place in the `.gitlab-ci.yml` file in the root directory of your GitLab repository:
 
-<Tabs>
-<TabItem value="node" label="Plain Node" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"Node"}
 stages:
   - test
 
@@ -69,10 +66,7 @@ serenity:
 # other configuration
 ```
 
-</TabItem>
-<TabItem value="playwright" label="Playwright" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"Playwright"}
 stages:
   - test
 
@@ -90,10 +84,7 @@ serenity:
 # other configuration
 ```
 
-</TabItem>
-<TabItem value="webdriverio-puppeteer" label="WebdriverIO with Puppeteer" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+Puppeteer"}
 stages:
   - test
 
@@ -111,10 +102,7 @@ serenity:
 # other configuration
 ```
 
-</TabItem>
-<TabItem value="webdriverio-selenium-standalone" label="WebdriverIO with Selenium Standalone" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+SeleniumStandalone"}
 stages:
   - test
 
@@ -136,9 +124,6 @@ serenity:
 
 # other configuration
 ```
-
-</TabItem>
-</Tabs>
 
 **How a GitLab CI pipeline works**:
 - When a code change is pushed to your [source control repository](https://docs.gitlab.com/ee/user/project/repository/), GitLab CI runs your code through the [`stages`](https://docs.gitlab.com/ee/ci/yaml/#stages) of a pipeline you've defined in your pipeline configuration file.
@@ -163,10 +148,7 @@ If the Docker image you use doesn't offer a Java Runtime Environment (JRE), you 
 
 To install a JRE before running the tests, add `apt-get update && apt-get install default-jre -y` to your GitLab CI script:
 
-<Tabs>
-<TabItem value="node" label="Plain Node" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"Node"}
 stages:
   - test
 
@@ -186,10 +168,7 @@ serenity:
 # other configuration
 ```
 
-</TabItem>
-<TabItem value="playwright" label="Playwright" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"Playwright"}
 stages:
   - test
 
@@ -209,10 +188,7 @@ serenity:
 # other configuration
 ```
 
-</TabItem>
-<TabItem value="webdriverio-puppeteer" label="WebdriverIO with Puppeteer" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+Puppeteer"}
 stages:
   - test
 
@@ -232,10 +208,7 @@ serenity:
 # other configuration
 ```
 
-</TabItem>
-<TabItem value="webdriverio-selenium-standalone" label="WebdriverIO with Selenium Standalone" default>
-
-```yaml title=".gitlab-ci.yml"
+```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+SeleniumStandalone"}
 stages:
   - test
 
@@ -260,9 +233,6 @@ serenity:
 # other configuration
 ```
 
-</TabItem>
-</Tabs>
-
 ### Building a custom Docker image
 
 To avoid installing the Java Runtime Environment every time your GitLab CI pipeline runs, you might prefer to [build a custom Docker image](https://docs.docker.com/build/building/packaging/),
@@ -270,10 +240,7 @@ publish it to your organisation's artifact registry, and use that image instead.
 
 To add a JRE to your base Docker image of choice, use a `Dockerfile` like in the example below:
 
-<Tabs>
-<TabItem value="node" label="Plain Node" default>
-
-```docker title="Dockerfile"
+```docker title="Dockerfile" tab={"label":"Node"}
 FROM node:lts
 
 RUN apt-get update \
@@ -281,10 +248,7 @@ RUN apt-get update \
  && apt-get clean
 ```
 
-</TabItem>
-<TabItem value="playwright" label="Playwright" default>
-
-```docker title="Dockerfile"
+```docker title="Dockerfile" tab={"label":"Playwright"}
 FROM mcr.microsoft.com/playwright:latest
 
 RUN apt-get update \
@@ -292,19 +256,13 @@ RUN apt-get update \
  && apt-get clean
 ```
 
-</TabItem>
-<TabItem value="webdriverio-puppeteer" label="WebdriverIO with Puppeteer" default>
-
-```docker title="Dockerfile"
+```docker title="Dockerfile" tab={"label":"WebdriverIO+Puppeteer"}
 FROM ghcr.io/puppeteer/puppeteer:latest
 
 RUN apt-get update \
  && apt-get install default-jre -y \
  && apt-get clean
 ```
-
-</TabItem>
-</Tabs>
 
 Next, build and publish your Docker image as per the instructions from your artifact registry vendor:
 - [Artifactory: "Docker registry"](https://jfrog.com/help/r/jfrog-artifactory-documentation/docker-registry)
