--- a/documentation/serenity-js.org/docs/test-runners/playwright-test.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/playwright-test.mdx
@@ -105,8 +105,8 @@ You might also want to install Serenity/JS reporting services, to accompany your
 - [`@serenity-js/serenity-bdd`](/api/serenity-bdd)
 
 To do the above, run the following command in your terminal:
-```shell
-npm install --save-dev @serenity-js/{core,console-reporter,playwright,playwright-test,web,serenity-bdd}
+```sh npm2yarn
+npm install --save-dev @serenity-js/core @serenity-js/console-reporter @serenity-js/playwright @serenity-js/playwright-test @serenity-js/web @serenity-js/serenity-bdd
 ```
 
 ### Configuring Serenity/JS
