--- a/documentation/serenity-js.org/docs/test-runners/webdriverio.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/webdriverio.mdx
@@ -105,8 +105,8 @@ You might also want to install Serenity/JS reporting services:
 - [`@serenity-js/serenity-bdd`](/api/serenity-bdd)
 
 To do the above, run the following command in your terminal:
-```shell
-npm install --save-dev @serenity-js/{core,console-reporter,webdriverio,web,serenity-bdd}
+```sh npm2yarn
+npm install --save-dev @serenity-js/core @serenity-js/console-reporter @serenity-js/webdriverio @serenity-js/web @serenity-js/serenity-bdd
 ```
 
 WebdriverIO offers a [local runner](https://webdriver.io/docs/runner#local-runner) that
