docs(website): updated docusaurus-remark-plugin-tab-blocks
fixes mrazauskas/docusaurus-remark-plugin-tab-blocks#191

--- a/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
+++ b/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
@@ -102,7 +102,7 @@ serenity:
 # other configuration
 ```
 
-```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+SeleniumStandalone"}
+```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+Selenium Standalone"}
 stages:
   - test
 
@@ -208,7 +208,7 @@ serenity:
 # other configuration
 ```
 
-```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+SeleniumStandalone"}
+```yaml title=".gitlab-ci.yml" tab={"label":"WebdriverIO+Selenium Standalone"}
 stages:
   - test
 
