--- a/documentation/serenity-js.org/docs/api-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/api-testing/index.mdx
@@ -5,14 +5,13 @@ title: API testing
 
 # API testing with Serenity/JS
 
-```mdx-code-block
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-```
+[**Serenity/JS REST**](/api/rest) is a [Screenplay Pattern](/handbook/design/screenplay-pattern)-compatible library that enables your actors to interact with REST- and other
+HTTP-based interfaces. Under the hood, Serenity/JS REST uses the popular [Axios HTTP client](https://github.com/axios/axios), allowing you to leverage its [plugin ecosystem](https://www.npmjs.com/search?q=keywords:axios),
+and adds automatic proxy server detection to ensure your API tests work smoothly, even in corporate networks.
 
-[Serenity/JS REST module](/api/rest) provides the building blocks to help you automate interactions with HTTP-based
-APIs of your system under test.
-
-In this chapter, you'll learn how to implement API-based test scenarios using Serenity/JS [Screenplay Pattern](/handbook/design/screenplay-pattern)
-libraries.
-
-<ArticleComingSoon />
+In this chapter, you'll learn about:
+- [**Interacting with HTTP APIs**](/handbook/api-testing/your-first-api-scenario/) using Serenity/JS Screenplay Pattern libraries
+- [**Configuring Serenity/JS HTTP client**](/handbook/api-testing/configuring-http-client/) for API testing
+- [**Sending HTTP requests**](/handbook/api-testing/sending-requests/) using the Serenity/JS REST module
+- [**Verifying HTTP responses**](/handbook/api-testing/verifying-responses/) using the Serenity/JS assertions module
+- [**Blended Testing**](/handbook/api-testing/blended-testing/) and writing business-focused API test scenarios
