docs(website): added Jasmine + WebdriverIO project template

--- a/documentation/serenity-js.org/docs/getting-started/project-templates.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/project-templates.mdx
@@ -54,6 +54,7 @@ To use Serenity/JS with WebdriverIO, start with one of the below templates:
 | Project Template                                                                                                         | Features                                                                                                           | Get Started                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
 |--------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | [Serenity/JS with Cucumber.js and WebdriverIO](https://github.com/serenity-js/serenity-js-cucumber-webdriverio-template) | Cucumber.js; WebdriverIO; TypeScript; Gitpod workspace; GitHub Actions; Local Chrome browser; Serenity BDD reports | [Generate&nbsp;new&nbsp;project](https://github.com/serenity-js/serenity-js-cucumber-webdriverio-template/generate) <br /> [View&nbsp;Code](https://github.com/serenity-js/serenity-js-cucumber-webdriverio-template) <br /> [View&nbsp;Serenity&nbsp;BDD&nbsp;Reports](https://serenity-js.github.io/serenity-js-cucumber-webdriverio-template/) <br /> [Start&nbsp;GitPod&nbsp;workspace](https://gitpod.io/#https://github.com/serenity-js/serenity-js-cucumber-webdriverio-template) |
+| [Serenity/JS with Jasmine and WebdriverIO](https://github.com/serenity-js/serenity-js-jasmine-webdriverio-template)      | Jasmine; WebdriverIO; TypeScript; Gitpod workspace; GitHub Actions; Local Chrome browser; Serenity BDD reports     | [Generate&nbsp;new&nbsp;project](https://github.com/serenity-js/serenity-js-jasmine-webdriverio-template/generate) <br /> [View&nbsp;Code](https://github.com/serenity-js/serenity-js-jasmine-webdriverio-template) <br /> [View&nbsp;Serenity&nbsp;BDD&nbsp;Reports](https://serenity-js.github.io/serenity-js-jasmine-webdriverio-template/) <br /> [Start&nbsp;GitPod&nbsp;workspace](https://gitpod.io/#https://github.com/serenity-js/serenity-js-jasmine-webdriverio-template)     |
 | [Serenity/JS with Mocha and WebdriverIO](https://github.com/serenity-js/serenity-js-mocha-webdriverio-template)          | Mocha; WebdriverIO; TypeScript; Gitpod workspace; GitHub Actions; Local Chrome browser; Serenity BDD reports       | [Generate&nbsp;new&nbsp;project](https://github.com/serenity-js/serenity-js-mocha-webdriverio-template/generate) <br /> [View&nbsp;Code](https://github.com/serenity-js/serenity-js-mocha-webdriverio-template) <br /> [View&nbsp;Serenity&nbsp;BDD&nbsp;Reports](https://serenity-js.github.io/serenity-js-mocha-webdriverio-template/) <br /> [Start&nbsp;GitPod&nbsp;workspace](https://gitpod.io/#https://github.com/serenity-js/serenity-js-mocha-webdriverio-template)             |
 
 ### Playwright
